# blacklist_service

./: .env.example  .gitignore  Procfile  README.md  buildspec.yml  pyproject.toml
app/: auth.py  config.py  extensions.py  main.py  models.py  resources.py  schemas.py
docs/: INFORME.md  INFORME_ENTREGA2.md
terraform/: beanstalk.tf  codebuild.tf  outputs.tf  variables.tf
tests/: conftest.py
